# This file is part of intel-tsx-hle. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/intel-tsx-hle/master/COPYRIGHT. No part of intel-tsx-hle, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of intel-tsx-hle. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/intel-tsx-hle/master/COPYRIGHT.


[package]
name = "intel-tsx-hle"
description = "Atomic intrinsics for HLE (Hardware Lock Elision) on some Intel Skylake CPUs"
keywords = ["intel", "tsx", "hle", "lock", "elision"]
categories = ["hardware-support", "concurrency"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/intel-tsx-hle"
repository = "https://github.com/lemonrock/intel-tsx-hle.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
